:bug: Fix alignment bug

--- a/src/sass/components/_btns.scss
+++ b/src/sass/components/_btns.scss
@@ -2,8 +2,9 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: .5em;
+  padding: 0.5em;
   z-index: 900;
+  display: flex;
 
   &--btn {
     $size: 2.5em;
